<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/nsRegister"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#F3F5F5"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_18sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/register_a_new_account"
                android:textColor="#0091EA"
                android:textSize="@dimen/_18sdp"
                tools:ignore="RtlSymmetry">

            </TextView>

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/create_account_to_start_your_first_plan_with_time2travel"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/_12sdp"
                tools:ignore="RtlSymmetry">

            </TextView>

            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"

                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />


            <EditText
                android:id="@+id/etEmailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"

                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />


            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"

                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:autofillHints="name"
                android:backgroundTint="@color/registerButton"
                android:elevation="8dp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/create_account"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="25dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/or_you_can_login_with_one_of_your_accounts"
                android:textColor="@color/blueTextColor"
                android:textSize="@dimen/_9sdp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:weightSum="3">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:contentDescription="@string/imageContent"
                    android:elevation="@dimen/_8sdp"

                    android:gravity="center"
                    android:src="@drawable/icons_apple" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_40sdp"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:contentDescription="@string/imageContent"
                    android:elevation="@dimen/_8sdp"
                    android:gravity="center"
                    android:src="@drawable/google_icon" />

                <ImageView
                    android:id="@+id/imageButton1"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginVertical="@dimen/_2sdp"
                    android:contentDescription="@string/imageContent"
                    android:elevation="@dimen/_8sdp"
                    android:gravity="center"
                    android:src="@drawable/icon_facebook" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:text="@string/by_getting_started_you_acknowledge_and_agree_to_terms_of_use_and_privacy_policy"
                android:textColor="#B3B3B3"
                android:textSize="@dimen/_8sdp">

            </TextView>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>