<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardColor"
    android:orientation="vertical"
    tools:context=".splash.SplashActivity">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/imageContent">

    </ImageView>


    <androidx.viewpager2.widget.ViewPager2
        android:layout_below="@+id/ivBack"
        android:id="@+id/viewPager2Register"
        android:layout_width="match_parent"
        android:layout_above="@+id/tab"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:visibility="visible" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:id="@+id/tab"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:strokeWidth="0dp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:strokeColor="@android:color/transparent"
        app:cardCornerRadius="40dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:backgroundTint="@android:color/white"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabIndicatorColor="@android:color/transparent"
            app:tabIndicatorHeight="0dp"
            app:tabRippleColor="@android:color/transparent"
            app:tabTextColor="@color/blueTextColor"
            app:tabSelectedTextColor="@android:color/white"
            app:tabBackground="@drawable/tabs_selector"
            app:tabTextAppearance="@style/CustomTabTextAppearance">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />


        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>

</ScrollView>
