<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:id="@+id/ivSecondSplash"
        android:src="@drawable/alexander_unsplash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_weight=".6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_italic"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:background="@drawable/second_splash_gradient"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="27dp"
                android:id="@+id/llWorldText"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/book_and_manage"
                    android:textSize="@dimen/_40sdp">

                </TextView>

                <TextView
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/your_entire_vacation_or_business_trip"
                    android:textSize="@dimen/_22sdp">

                </TextView>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/llIndicator"

                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/dummyView"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/_68sdp"
                    android:layout_height="6dp"
                    android:layout_marginStart="@dimen/_39sdp"
                    android:background="@drawable/unselected_rectangle_line">

                </View>

                <View
                    android:layout_width="@dimen/_68sdp"
                    android:layout_height="@dimen/_6sdp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/selected_rectangle_line">

                </View>

                <View
                    android:layout_width="@dimen/_68sdp"
                    android:layout_height="@dimen/_6sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/unselected_rectangle_line">

                </View>


                <ImageView
                    android:id="@+id/ivSecondSplashButton"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/imageContent">

                </ImageView>


            </LinearLayout>
            <View
                android:layout_alignParentBottom="true"
                android:id="@+id/dummyView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

            </View>

        </RelativeLayout>


    </LinearLayout>
</FrameLayout>
