<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    android:orientation="vertical"
    tools:context=".splash.SplashActivity">




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#F3F5F5"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_18sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_18sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="Login"
                android:textColor="#0091EA"
                android:textSize="@dimen/_18sdp"
                tools:ignore="RtlSymmetry">

            </TextView>





            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"

                android:layout_marginTop="@dimen/_20sdp"
                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"

                android:autofillHints="name"
                android:background="@drawable/et_style"
                android:elevation="8dp"
                android:fontFamily="@font/light_italic"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:textColorHint="@color/edtTextHintColor" />




            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:autofillHints="name"
                android:backgroundTint="@color/registerButton"
                android:elevation="8dp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/login"
                android:layout_marginBottom="@dimen/_22sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:cornerRadius="25dp" />






        </LinearLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>