<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_class"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/alexander_unsplash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_27sdp"
            android:layout_weight="1.4"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_italic"
                android:text="@string/skip"
                android:id="@+id/tvSkip"
                android:textColor="@color/white"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:background="@drawable/second_splash_gradient"

            android:layout_weight="0.6"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llWorldText"

                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_27sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_italic"
                    android:text="Pay for all your travel needs with"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_22sdp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/bfic"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_40sdp">

                </TextView>
                <LinearLayout
                    android:id="@+id/llIndicator"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_68sdp"
                        android:layout_height="@dimen/_6sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/unselected_rectangle_line">

                    </View>

                    <View
                        android:layout_width="@dimen/_68sdp"
                        android:layout_height="@dimen/_6sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/unselected_rectangle_line">

                    </View>

                    <View
                        android:layout_width="@dimen/_68sdp"
                        android:layout_height="@dimen/_6sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@drawable/selected_rectangle_line">

                    </View>

                    <ImageView
                        android:id="@+id/ivThirdSplashButton"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:src="@drawable/ic_add"
                        android:contentDescription="@string/imageContent">

                    </ImageView>

                </LinearLayout>

                <View
                    android:id="@+id/dummyView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentBottom="true">

                </View>

            </LinearLayout>




        </RelativeLayout>


    </LinearLayout>
</FrameLayout>
